namespace java com.moseeker.thrift.gen.dao.struct.hrdb
namespace py thrift_gen.gen.dao.struct.hrdb


struct HrThirdPartyAccountHrDO {

	1: optional i32 thirdPartyAccountId,	//第三方账号ID
	2: optional i32 hrAccountId	//hr账号ID

}
